Closed
Bug 1216072
Opened 10 years ago
Closed 10 years ago
IsCallerChrome crash in nsGlobalWindow::MoveByOuter
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla44
| Tracking | Status | |
|---|---|---|
| firefox44 | --- | fixed |
People
(Reporter: ananuti, Assigned: bholley)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
22.28 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1215398 +++
This bug was filed from the Socorro interface and is
report bp-6acd1f76-64d6-4650-b405-81e0a2151019.
=============================================================
seems like the patch in bug 1215398 doesn't fix this. i now have STR.
STR:
1. install https://db.tt/YBixJujG
2. authorize twitter account.
3. load chrome://echofon/content/user-view.xul?screen_name=_bioengineer
4. click at the image on the right.
5. after the image loaded, click at `x` on top left of the image.
if it did not crash yet, click at next image and repeat step 5, keep clicking until it crash.
happy crash hunting :)
bp-c5964e32-c6a3-4671-a9ee-4127b2151019
bp-6acd1f76-64d6-4650-b405-81e0a2151019
| Reporter | ||
Updated•10 years ago
|
Flags: needinfo?(bobbyholley)
Comment 1•10 years ago
|
||
Ah, need to pass the boolean to CheckSecurityLeftAndTop as well, looks like.
Assignee: nobody → bobbyholley
| Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8675833 -
Flags: review?(bzbarsky)
| Assignee | ||
Comment 3•10 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=8a7739c79a54
Thanks for filing these Ekanan!
Flags: needinfo?(bobbyholley)
Comment 4•10 years ago
|
||
Comment on attachment 8675833 [details] [diff] [review]
Pass aCallerIsChrome in more places. v1
r=me
Attachment #8675833 -
Flags: review?(bzbarsky) → review+
Comment 6•10 years ago
|
||
I'm also consistently crashing with this signature in recent builds but a different stack. Filed bug 1216308
Comment 7•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Comment 8•10 years ago
|
||
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•