Bug 1216072 - Pass aCallerIsChrome in more places. r=bz